Wayland: the file selector shrinks each time it's displayed under KDE #113059

Closed
opened 2023-09-29 14:29:22 +02:00 by sailesh-poudel · 3 comments

System Information
Operating system: Linux-6.5.5-arch1-1-x86_64-with-glibc2.38 64 Bits, WAYLAND UI
Graphics card: Mesa Intel(R) UHD Graphics 630 (CFL GT2) Intel 4.6 (Core Profile) Mesa 23.1.8-arch1.1

Blender Version
Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-09-27 23:25, hash: 13f5879e3c61
Boken in 3.6.4 also, continues import of fbx files doesn't shows the import file browser window.

Short description of error
Continues import of usd files doesn't shows the import dialog box after certain imports.
The import dialog box shrinks by itself after each import.

Exact steps for others to reproduce the error

  1. Import usdz texture to create a assets.
  2. use import > usdz AND add them to quick favorite for quick import
  3. after certain tries, usually greater than 8 times, the import dialog box starts shrinking by each time
  4. And doesn't shows up at all after certain times of import.

EDIT: see this link for a video of the problem: #113062 (comment)

**System Information** Operating system: Linux-6.5.5-arch1-1-x86_64-with-glibc2.38 64 Bits, WAYLAND UI Graphics card: Mesa Intel(R) UHD Graphics 630 (CFL GT2) Intel 4.6 (Core Profile) Mesa 23.1.8-arch1.1 **Blender Version** Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-09-27 23:25, hash: `13f5879e3c61` Boken in 3.6.4 also, continues import of fbx files doesn't shows the import file browser window. **Short description of error** Continues import of usd files doesn't shows the import dialog box after certain imports. The import dialog box shrinks by itself after each import. **Exact steps for others to reproduce the error** 1. Import usdz texture to create a assets. 2. use import > usdz AND add them to quick favorite for quick import 3. after certain tries, usually greater than 8 times, the import dialog box starts shrinking by each time 4. And doesn't shows up at all after certain times of import. ---- EDIT: see this link for a video of the problem: https://projects.blender.org/blender/blender/issues/113062#issuecomment-1063090
sailesh-poudel added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-09-29 14:29:22 +02:00
Member

Might be wayland specific. I'm not able to confirm this on Windows.
@lichtwerk @ChengduLittleA can you check?

Might be wayland specific. I'm not able to confirm this on Windows. @lichtwerk @ChengduLittleA can you check?
Campbell Barton added the
Interest
Wayland
label 2023-11-27 01:48:22 +01:00
Campbell Barton changed title from Continues import doesn't show the import file browser to Wayland: the file selector shrinks each time it's displayed 2023-11-27 01:49:08 +01:00
Campbell Barton self-assigned this 2023-11-27 01:49:17 +01:00

I can't redo this error on GNOME 45.1, tested with display scale set to 100%, 175% & 200%.

  • Which Wayland compositor are you using & which version?
  • Does this happen with 100% scaled display?
  • Does this occur with software OpenGL? Run Blender with env LIBGL_ALWAYS_SOFTWARE=1 blender
I can't redo this error on GNOME 45.1, tested with display scale set to 100%, 175% & 200%. - Which Wayland compositor are you using & which version? - Does this happen with 100% scaled display? - Does this occur with software OpenGL? Run Blender with `env LIBGL_ALWAYS_SOFTWARE=1 blender`
Campbell Barton added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-11-27 23:50:49 +01:00
Campbell Barton changed title from Wayland: the file selector shrinks each time it's displayed to Wayland: the file selector shrinks each time it's displayed under KDE 2023-11-29 04:12:56 +01:00

Note that this has been worked around by ignoring the window size requested by KDE when the window is first created - with an exception for windows that are larger than the largest monitor.

Reported the issue to KDE: https://bugs.kde.org/show_bug.cgi?id=477737

Note that this has been worked around by ignoring the window size requested by KDE when the window is first created - with an exception for windows that are larger than the largest monitor. Reported the issue to KDE: https://bugs.kde.org/show_bug.cgi?id=477737
Pratik Borhade added
Status
Archived
and removed
Status
Needs Information from User
labels 2024-03-01 07:36:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113059
No description provided.