Fix #113059: file selector shrinks on each display under KDE

Under KDE the initial window size includes the window decorations.
Add a workaround to enforce the requested window size for new windows
under KDE.