intern/ghost/intern/GHOST_SystemWayland.hh
@@ -230,9 +230,14 @@ class GHOST_SystemWayland : public GHOST_System {
 #endif
   struct xdg_wm_base *xdg_decor_shell_get();
   struct zxdg_decoration_manager_v1 *xdg_decor_manager_get();
+#ifdef USE_XDG_INIT_WINDOW_SIZE_HACK
+  bool xdg_decor_needs_window_size_hack() const;
+#endif
   /* End `xdg_decor`. */
 
   const std::vector<GWL_Output *> &outputs_get() const;
+  /** Return the output with the largest pixel-area. */
+  const GWL_Output *outputs_get_max_native_size() const;
 
   struct wl_shm *wl_shm_get() const;
 
