intern/ghost/intern/GHOST_WindowWayland.cc
@@ -800,7 +800,10 @@ static void gwl_window_frame_update_from_pending_no_lock(GWL_Window *win)
   }
 
   if (surface_needs_egl_resize) {
-    wl_egl_window_resize(win->wl.egl_window, UNPACK2(win->frame.size), 0, 0);
+    /* Null on window initialization. */
+    if (win->wl.egl_window) {
+      wl_egl_window_resize(win->wl.egl_window, UNPACK2(win->frame.size), 0, 0);
+    }
   }
 
   if (surface_needs_buffer_scale) {
@@ -1485,9 +1488,6 @@ GHOST_WindowWayland::GHOST_WindowWayland(GHOST_SystemWayland *system,
 
   wl_surface_add_listener(window_->wl.surface, &wl_surface_listener, window_);
 
-  window_->wl.egl_window = wl_egl_window_create(
-      window_->wl.surface, int(window_->frame.size[0]), int(window_->frame.size[1]));
-
   wp_fractional_scale_manager_v1 *fractional_scale_manager =
       system->wp_fractional_scale_manager_get();
   if (fractional_scale_manager) {
@@ -1550,9 +1550,6 @@ GHOST_WindowWayland::GHOST_WindowWayland(GHOST_SystemWayland *system,
 
   wl_surface_set_user_data(window_->wl.surface, this);
 
-  /* Call top-level callbacks. */
-  wl_surface_commit(window_->wl.surface);
-
 #ifdef GHOST_OPENGL_ALPHA
   setOpaque();
 #endif
@@ -1569,6 +1566,9 @@ GHOST_WindowWayland::GHOST_WindowWayland(GHOST_SystemWayland *system,
     {
       decor.scale_fractional_from_output = scale_fractional_from_output;
     }
+
+    /* Commit needed so the top-level callbacks run (and `toplevel` can be accessed). */
+    wl_surface_commit(window_->wl.surface);
 
     /* Additional round-trip is needed to ensure `xdg_toplevel` is set. */
     wl_display_roundtrip(system_->wl_display_get());
@@ -1600,12 +1600,7 @@ GHOST_WindowWayland::GHOST_WindowWayland(GHOST_SystemWayland *system,
   else
 #endif /* WITH_GHOST_WAYLAND_LIBDECOR */
   {
-    /* Call top-level callbacks. */
     WGL_XDG_Decor_Window &decor = *window_->xdg_decor;
-    while (!decor.initial_configure_seen) {
-      wl_display_flush(system->wl_display_get());
-      wl_display_dispatch(system->wl_display_get());
-    }
 
     if (system_->xdg_decor_manager_get()) {
       decor.toplevel_decor = zxdg_decoration_manager_v1_get_toplevel_decoration(
@@ -1617,7 +1612,21 @@ GHOST_WindowWayland::GHOST_WindowWayland(GHOST_SystemWayland *system,
     }
 
     gwl_window_state_set(window_, state);
+
+    /* Commit needed to so configure callback runs. */
+    wl_surface_commit(window_->wl.surface);
+    while (!decor.initial_configure_seen) {
+      wl_display_flush(system->wl_display_get());
+      wl_display_dispatch(system->wl_display_get());
+    }
   }
+
+  /* Postpone binding the buffer until after it's decor has been configured:
+   * - Ensure the window is sized properly (with XDG window decorations), see: #113059.
+   * - Avoids flickering on startup.
+   */
+  window_->wl.egl_window = wl_egl_window_create(
+      window_->wl.surface, int(window_->frame.size[0]), int(window_->frame.size[1]));
 
   /* EGL context. */
   if (setDrawingContextType(type) == GHOST_kFailure) {
